--- a/HTML/esports.html
+++ b/HTML/esports.html
@@ -11,7 +11,7 @@
   <nav>
     <label class="logo">NexusNews</label>
     <u1>
-      <li><a href="index.html">Home</a></li>
+      <li><a href="/index.html">Home</a></li>
       <li><a href="blog.html">Blog</a></li>
       <li><a href="esports.html">Esports</a></li>
       <li><a href="guides.html">Guides</a></li>
