Reformatted using prettier

--- a/index.html
+++ b/index.html
@@ -1,36 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
-  <link rel="stylesheet" href="CSS/styles.css">
+    <head>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <title>Document</title>
+        <link rel="stylesheet" href="CSS/styles.css" />
+    </head>
+    <body>
+        <section class="header">
+            <nav>
+                <label class="logo">NexusNews</label>
+                <u1>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="HTML/blog.html">Blog</a></li>
+                    <li><a href="HTML/esports.html">Esports</a></li>
+                    <li><a href="HTML/guides.html">Guides</a></li>
+                    <li><a href="HTML/about.html">About Us</a></li>
+                </u1>
+            </nav>
+        </section>
 
-</head>
-<body>
-  <section class="header">
-  <nav>
-    <label class="logo">NexusNews</label>
-    <u1>
-      <li><a href="index.html">Home</a></li>
-      <li><a href="HTML/blog.html">Blog</a></li>
-      <li><a href="HTML/esports.html">Esports</a></li>
-      <li><a href="HTML/guides.html">Guides</a></li>
-      <li><a href="HTML/about.html">About Us</a></li>
-
-    </u1>
-  </nav>
-</section>
-
-
-<div class="text-box">
-<h1>An Innovative League of Legends News Site</h1>
-<p>
-  We offer up to date news on the latest champions, current meta builds, and state of the art guides for determined players. 
-</p>
-
-</div>
-
-
-</body>
+        <div class="text-box">
+            <h1>An Innovative League of Legends News Site</h1>
+            <p>
+                We offer up to date news on the latest champions, current meta
+                builds, and state of the art guides for determined players.
+            </p>
+        </div>
+    </body>
 </html>
