--- a/HTML/esports.html
+++ b/HTML/esports.html
@@ -1,30 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
-  <link rel="stylesheet" href="/CSS/styles.css">
+    <head>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <title>Document</title>
+        <link rel="stylesheet" href="/CSS/styles.css" />
+    </head>
+    <body>
+        <nav>
+            <label class="logo">NexusNews</label>
+            <u1>
+                <li><a href="/index.html">Home</a></li>
+                <li><a href="blog.html">Blog</a></li>
+                <li><a href="esports.html">Esports</a></li>
+                <li><a href="guides.html">Guides</a></li>
+                <li><a href="about.html">About Us</a></li>
+            </u1>
+        </nav>
 
-</head>
-<body>
-  <nav>
-    <label class="logo">NexusNews</label>
-    <u1>
-      <li><a href="/index.html">Home</a></li>
-      <li><a href="blog.html">Blog</a></li>
-      <li><a href="esports.html">Esports</a></li>
-      <li><a href="guides.html">Guides</a></li>
-      <li><a href="about.html">About Us</a></li>
-
-    </u1>
-  </nav>
-
-
-<main>
-This is the esports page
-
-</main>
-
-</body>
+        <main>This is the esports page</main>
+    </body>
 </html>
