--- a/HTML/about.html
+++ b/HTML/about.html
@@ -18,6 +18,10 @@
             </u1>
         </nav>
 
-        <main>This is the about page</main>
+        <main>
+            <div class="text-box">
+                <h1>An Innovative League 
+            </div>
+        </main>
     </body>
 </html>
