--- a/index.html
+++ b/index.html
@@ -6,26 +6,55 @@
         <title>Document</title>
         <link rel="stylesheet" href="CSS/styles.css" />
     </head>
-    <body>
-        <section class="header">
-            <nav>
-                <label class="logo">NexusNews</label>
-                <u1>
-                    <li><a href="index.html">Home</a></li>
-                    <li><a href="HTML/blog.html">Blog</a></li>
-                    <li><a href="HTML/esports.html">Esports</a></li>
-                    <li><a href="HTML/guides.html">Guides</a></li>
-                    <li><a href="HTML/about.html">About Us</a></li>
-                </u1>
-            </nav>
-        </section>
+    <body></body>
+    <section class="header">
+        <nav>
+            <label class="logo">NexusNews</label>
+            <u1>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="HTML/blog.html">Blog</a></li>
+                <li><a href="HTML/esports.html">Esports</a></li>
+                <li><a href="HTML/guides.html">Guides</a></li>
+                <li><a href="HTML/about.html">About Us</a></li>
+            </u1>
+        </nav>
+    </section>
 
-        <div class="text-box">
-            <h1>An Innovative League of Legends News Site</h1>
-            <p>
-                We offer up to date news on the latest champions, current meta
-                builds, and state of the art guides for determined players.
-            </p>
-        </div>
-    </body>
+    <div class="text-box">
+        <h1>An Innovative League of Legends News Site</h1>
+        <p>
+            We offer up to date news on the latest champions, current meta
+            builds, and state of the art guides for determined players. This a
+            test paragraph...
+        </p>
+
+        <p>LEARN MORE (BUTTON)</p>
+    </div>
+
+    <div class="POPULAR">
+        <h2>Popular Content</h2>
+    </div>
+
+    <div class="FRQ">
+        <h2>Frequently asked questions:</h2>
+        <h3>Is NexusNews a legit news source?</h3>
+        <p>
+            Yes! NexusNews was carefully crafted to provide accurate information
+            for players made by players. We peformed extensive research on
+            popular topics and provide beginner tips to those who are struggling
+            to improve. Our website is secure and developed in unision between
+            three college student developers.
+        </p>
+        <p>Second paragraph...</p>
+
+        <h3>
+            Why NexusNews.gg is the best site to gather league of legends
+            information?
+        </h3>
+        <p>
+            If you are looking for a website that answers all your in-game
+            questions, you've came to the right place. Below are some reasons
+            why you may choose us over our competitors: "INSERT LIST"
+        </p>
+    </div>
 </html>
