Blog center update

--- a/HTML/blog.html
+++ b/HTML/blog.html
@@ -17,7 +17,11 @@
                 <li><a href="about.html">About Us</a></li>
             </u1>
         </nav>
+        <div class="text-box">
+            <h1>Blog</h1>
+            <p>This is a blog</p>
 
-        <main>This is the blog page</main>
+            <p>LEARN MORE (BUTTON)</p>
+        </div>
     </body>
 </html>
