Home page updates, organized styling

--- a/HTML/about.html
+++ b/HTML/about.html
@@ -20,7 +20,7 @@
 
         <main>
             <div class="text-box">
-                <h1>An Innovative League 
+                <h1>An Innovative League</h1>
             </div>
         </main>
     </body>
