--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
         <title>Document</title>
         <link rel="stylesheet" href="CSS/styles.css" />
     </head>
-    <body></body>
     <section class="header">
         <nav>
             <label class="logo">NexusNews</label>
@@ -20,41 +19,68 @@
         </nav>
     </section>
 
-    <div class="text-box">
-        <h1>An Innovative League of Legends News Site</h1>
+    <div class="main1">
+        <h1>NexusNews</h1>
         <p>
             We offer up to date news on the latest champions, current meta
-            builds, and state of the art guides for determined players. This a
-            test paragraph...
+            builds, and state of the art guides for players looking to improve
+            their gameplay. We are determined to deliver an extensive user
+            experience.
         </p>
 
-        <p>LEARN MORE (BUTTON)</p>
+        <p>Learn More</p>
     </div>
 
-    <div class="POPULAR">
-        <h2>Popular Content</h2>
+    <div class="main2">
+        <h2>eSports</h2>
+        <h3>Learn by watching professionals play</h3>
+        <p>Blend your game sense with</p>
     </div>
 
-    <div class="FRQ">
-        <h2>Frequently asked questions:</h2>
-        <h3>Is NexusNews a legit news source?</h3>
-        <p>
-            Yes! NexusNews was carefully crafted to provide accurate information
-            for players made by players. We peformed extensive research on
-            popular topics and provide beginner tips to those who are struggling
-            to improve. Our website is secure and developed in unision between
-            three college student developers.
-        </p>
-        <p>Second paragraph...</p>
-
-        <h3>
-            Why NexusNews.gg is the best site to gather league of legends
-            information?
-        </h3>
-        <p>
-            If you are looking for a website that answers all your in-game
-            questions, you've came to the right place. Below are some reasons
-            why you may choose us over our competitors: "INSERT LIST"
-        </p>
+    <div class="main3">
+        <h2>Personalized guides</h2>
+        <h3>Tailored to suit individualistic needs</h3>
+        <p>Blah blah blah</p>
     </div>
+
+    <body>
+        <div class="popular-content">
+            <h2>Popular Content</h2>
+            <h3>Below is a list of our most popular content</h3>
+        </div>
+
+        <div class="FRQ">
+            <h2>FAQ</h2>
+            <h3>Is NexusNews a legit news source?</h3>
+            <p>
+                Yes! NexusNews was carefully crafted to provide accurate
+                information for players made by players. We peformed extensive
+                research on popular topics and provide beginner tips to those
+                who are struggling to improve. Our website is secure and
+                developed in unision between three college student developers.
+            </p>
+            <p>Second paragraph...</p>
+
+            <h3>
+                Why NexusNews.gg is the best site to gather league of legends
+                information?
+            </h3>
+            <p>
+                If you are looking for a website that answers all your in-game
+                questions, you've came to the right place. Below are some
+                reasons why you may choose us over our competitors: "INSERT
+                LIST"
+            </p>
+            <h3>Question 3</h3>
+            <p>BLAH BLAH BLAH</p>
+            <h3>Question 4</h3>
+            <p>BlAH BLAH BLAH</p>
+            <h3>Question 5</h3>
+            <p>BLAH BLAH BLAH</p>
+        </div>
+
+        <div class="footer">
+            <p>This is a footer</p>
+        </div>
+    </body>
 </html>
