--- a/index.html
+++ b/index.html
@@ -24,8 +24,7 @@
         <p>
             We offer up to date news on the latest champions, current meta
             builds, and state of the art guides for players looking to improve
-            their gameplay. We are determined to deliver an extensive user
-            experience.
+            their gameplay. Click the button below for additional content.
         </p>
 
         <p>Learn More</p>
@@ -34,13 +33,27 @@
     <div class="main2">
         <h2>eSports</h2>
         <h3>Learn by watching professionals play</h3>
-        <p>Blend your game sense with</p>
+        <p></p>
+
+        <img src="images/eSportshome.jpg" alt="eSports Main" />
+
+        <div class="esportsButton">
+            <p>LEARN MORE</p>
+        </div>
     </div>
 
     <div class="main3">
         <h2>Personalized guides</h2>
         <h3>Tailored to suit individualistic needs</h3>
-        <p>Blah blah blah</p>
+        <p>
+            Our guides aim to deliver high quality content to players of all
+            levels. Each guide serves as way to drastically improve your
+            gameplay. Through grit and a little bit of luck, you can climb the
+            ranks with the help of our ad-free content.
+        </p>
+        <div class="guidesButton">
+            <p>LEARN THE GAME</p>
+        </div>
     </div>
 
     <body>
