--- a/index.html
+++ b/index.html
@@ -33,9 +33,12 @@
     <div class="main2">
         <h2>eSports</h2>
         <h3>Learn by watching professionals play</h3>
-        <p></p>
-
-        <img src="images/eSportshome.jpg" alt="eSports Main" />
+        <p>
+            Whether you are unfamiliar with the eSports scene or are interested
+            in Worlds, we cover everything from players, teams, and tournament
+            placements. Hundereds of professional League of Legends matches take
+            place all over the world simultaneously.
+        </p>
 
         <div class="esportsButton">
             <p>LEARN MORE</p>
@@ -70,10 +73,20 @@
                 information for players made by players. We peformed extensive
                 research on popular topics and provide beginner tips to those
                 who are struggling to improve. Our website is secure and
-                developed in unision between three college student developers.
+                developed in unision with knowledgable League of Legends
+                players.
             </p>
-            <p>Second paragraph...</p>
-
+            <p>
+                Our information is garnered in hopes of improving the player.
+                You have the power to decide how you want to learn - whether
+                this be through our
+                <b> eSports section, personalized guides,</b> or
+                <b> informative blogs.</b> Additionally, the information we
+                acquire is information obtained all around the world in all
+                areas We constantly expand our arsenal to include updated
+                information, in an effort to offer you the best service
+                possible.
+            </p>
             <h3>
                 Why NexusNews.gg is the best site to gather league of legends
                 information?
@@ -81,15 +94,59 @@
             <p>
                 If you are looking for a website that answers all your in-game
                 questions, you've came to the right place. Below are some
-                reasons why you may choose us over our competitors: "INSERT
-                LIST"
+                reasons why you may choose us over our competitors:
+            </p>
+            <ul>
+                <li>World-wide eSports content</li>
+                <li>High in demand blogs</li>
+                <li>Personalized Content</li>
+            </ul>
+            <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolore
+                eveniet perferendis similique fugiat sequi iure velit adipisci
+                qui error officia ullam harum facilis, corrupti dolores? Alias,
+                delectus id? Repellat, dignissimos.
             </p>
             <h3>Question 3</h3>
-            <p>BLAH BLAH BLAH</p>
+            <p>
+                Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+                Consequuntur quia illo accusantium doloremque quam magni
+                nostrum, reprehenderit neque mollitia qui earum ipsa vel, a
+                soluta blanditiis esse fuga temporibus quos?
+            </p>
+            <p>
+                Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+                Dolores earum consequatur, maxime nulla labore dolorem
+                architecto error eligendi quaerat doloribus possimus asperiores
+                similique voluptatibus vitae, iusto voluptates, expedita dicta
+                adipisci.
+            </p>
             <h3>Question 4</h3>
-            <p>BlAH BLAH BLAH</p>
+            <p>
+                Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+                Necessitatibus perspiciatis, distinctio placeat nemo eaque eos
+                illum reprehenderit praesentium voluptatibus ab culpa porro
+                quibusdam saepe! Iusto soluta consequuntur tempora animi quod.
+            </p>
+            <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet
+                obcaecati harum numquam, iusto laborum praesentium officiis quas
+                soluta nemo ea dolore ducimus aliquid nulla incidunt fuga optio
+                eveniet nisi officia.
+            </p>
             <h3>Question 5</h3>
-            <p>BLAH BLAH BLAH</p>
+            <p>
+                Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+                Explicabo delectus nam necessitatibus minus reiciendis quod
+                asperiores obcaecati officia modi harum quaerat neque quibusdam
+                dolorum, porro ipsam quo blanditiis sapiente earum.
+            </p>
+            <p>
+                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ullam
+                recusandae cumque ex illum voluptates modi itaque beatae earum
+                laboriosam rerum doloremque, temporibus omnis ratione eveniet
+                libero exercitationem commodi eius dolore.
+            </p>
         </div>
 
         <div class="footer">
