--- a/HTML/blog.html
+++ b/HTML/blog.html
@@ -5,6 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Document</title>
         <link rel="stylesheet" href="/CSS/styles.css" />
+        <link rel="images" href="/images/" />
     </head>
     <body>
         <nav>
@@ -20,7 +21,6 @@
         <div class="text-box">
             <h1>Blog</h1>
             <p>This is a blog</p>
-
             <p>LEARN MORE (BUTTON)</p>
         </div>
     </body>
