--- a/index.html
+++ b/index.html
@@ -18,48 +18,48 @@
             </u1>
         </nav>
     </section>
-
-    <div class="main1">
-        <h1>NexusNews</h1>
-        <p>
-            We offer up to date news on the latest champions, current meta
-            builds, and state of the art guides for players looking to improve
-            their gameplay. Click the button below for additional content.
-        </p>
-
-        <p>Learn More</p>
-    </div>
-
-    <div class="main2">
-        <h2>eSports</h2>
-        <h3>Learn by watching professionals play</h3>
-        <p>
-            Whether you are unfamiliar with the eSports scene or are interested
-            in Worlds, we cover everything from players, teams, and tournament
-            placements. Hundereds of professional League of Legends matches take
-            place all over the world simultaneously.
-        </p>
-
-        <div class="esportsButton">
-            <p>LEARN MORE</p>
-        </div>
-    </div>
-
-    <div class="main3">
-        <h2>Personalized guides</h2>
-        <h3>Tailored to suit individualistic needs</h3>
-        <p>
-            Our guides aim to deliver high quality content to players of all
-            levels. Each guide serves as way to drastically improve your
-            gameplay. Through grit and a little bit of luck, you can climb the
-            ranks with the help of our ad-free content.
-        </p>
-        <div class="guidesButton">
-            <p>LEARN THE GAME</p>
-        </div>
-    </div>
-
     <body>
+        <div class="main1">
+            <h1>NexusNews</h1>
+            <p>
+                We offer up to date news on the latest champions, current meta
+                builds, and state of the art guides for players looking to
+                improve their gameplay. Click the button below for additional
+                content.
+            </p>
+
+            <p>Learn More</p>
+        </div>
+
+        <div class="main2">
+            <h2>eSports</h2>
+            <h3>Learn by watching professionals play</h3>
+            <p>
+                Whether you are unfamiliar with the eSports scene or are
+                interested in Worlds, we cover everything from players, teams,
+                and tournament placements. Hundereds of professional League of
+                Legends matches take place all over the world simultaneously.
+            </p>
+
+            <div class="esportsButton">
+                <p>LEARN MORE</p>
+            </div>
+        </div>
+
+        <div class="main3">
+            <h2>Personalized guides</h2>
+            <h3>Tailored to suit individualistic needs</h3>
+            <p>
+                Our guides aim to deliver high quality content to players of all
+                levels. Each guide serves as way to drastically improve your
+                gameplay. Through grit and a little bit of luck, you can climb
+                the ranks with the help of our ad-free content.
+            </p>
+            <div class="guidesButton">
+                <p>LEARN THE GAME</p>
+            </div>
+        </div>
+
         <div class="popular-content">
             <h2>Popular Content</h2>
             <h3>Below is a list of our most popular content</h3>
@@ -97,9 +97,9 @@
                 reasons why you may choose us over our competitors:
             </p>
             <ul>
-                <li>World-wide eSports content</li>
-                <li>High in demand blogs</li>
-                <li>Personalized Content</li>
+                <li>- World-wide eSports content</li>
+                <li>- High in demand blogs</li>
+                <li>- Personalized Content</li>
             </ul>
             <p>
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolore
