Fonts complete, buttons IP

--- a/index.html
+++ b/index.html
@@ -28,7 +28,9 @@
                 content.
             </p>
 
-            <p>Learn More</p>
+            <div class="Button">
+                <p>LEARN MORE</p>
+            </div>
         </div>
 
         <div class="main2">
@@ -41,7 +43,7 @@
                 Legends matches take place all over the world simultaneously.
             </p>
 
-            <div class="esportsButton">
+            <div class="Button">
                 <p>LEARN MORE</p>
             </div>
         </div>
@@ -55,7 +57,7 @@
                 gameplay. Through grit and a little bit of luck, you can climb
                 the ranks with the help of our ad-free content.
             </p>
-            <div class="guidesButton">
+            <div class="Button">
                 <p>LEARN THE GAME</p>
             </div>
         </div>
