--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <title>Document</title>
         <link rel="stylesheet" href="CSS/styles.css" />
     </head>
@@ -20,51 +21,46 @@
     </section>
     <body>
         <div class="main1">
+            <p>An informative news site</p>
             <h1>NexusNews</h1>
-            <p>
-                We offer up to date news on the latest champions, current meta
-                builds, and state of the art guides for players looking to
-                improve their gameplay. Click the button below for additional
-                content.
-            </p>
-
-            <div class="Button">
-                <p>LEARN MORE</p>
-            </div>
-        </div>
-
-        <div class="main2">
-            <h2>eSports</h2>
-            <h3>Learn by watching professionals play</h3>
-            <p>
-                Whether you are unfamiliar with the eSports scene or are
-                interested in Worlds, we cover everything from players, teams,
-                and tournament placements. Hundereds of professional League of
-                Legends matches take place all over the world simultaneously.
-            </p>
-
-            <div class="Button">
-                <p>LEARN MORE</p>
-            </div>
-        </div>
-
-        <div class="main3">
-            <h2>Personalized guides</h2>
-            <h3>Tailored to suit individualistic needs</h3>
-            <p>
-                Our guides aim to deliver high quality content to players of all
-                levels. Each guide serves as way to drastically improve your
-                gameplay. Through grit and a little bit of luck, you can climb
-                the ranks with the help of our ad-free content.
-            </p>
-            <div class="Button">
-                <p>LEARN THE GAME</p>
-            </div>
+            <a class="buttonPrimary" href="HTML/blog.html">LEARN MORE</a>
         </div>
 
         <div class="popular-content">
             <h2>Popular Content</h2>
             <h3>Below is a list of our most popular content</h3>
+        </div>
+
+        <div class="main2">
+            <div class="main2text">
+                <h2>eSports</h2>
+                <h3>Learn by watching professionals play</h3>
+                <p>
+                    Whether you are unfamiliar with the eSports scene or are
+                    interested in Worlds, we cover everything from players,
+                    teams, and tournament placements. Hundereds of professional
+                    League of Legends matches take place all over the world
+                    simultaneously.
+                </p>
+            </div>
+            <div>
+                <img src="images/eSportshome.jpg" alt="" />
+            </div>
+        </div>
+        <div class="main3">
+            <div class="main3text">
+                <h2>Personalized Guides</h2>
+                <h3>Tailored to suit individualistic needs</h3>
+                <p>
+                    Our guides aim to deliver high quality content to players of
+                    all levels. Each guide serves as way to drastically improve
+                    your gameplay. Through grit and a little bit of luck, you
+                    can climb the ranks with the help of our ad-free content.
+                </p>
+            </div>
+            <div>
+                <img src="images/sittingtree.jpeg" alt="" />
+            </div>
         </div>
 
         <div class="FRQ">
