--- a/index.html
+++ b/index.html
@@ -23,12 +23,13 @@
         <div class="main1">
             <p>An informative news site</p>
             <h1>NexusNews</h1>
-            <a class="buttonPrimary" href="HTML/blog.html">LEARN MORE</a>
+            <a class="buttonPrimary" href="HTML/blog.html">LEARN THE GAME</a>
         </div>
 
         <div class="popular-content">
             <h2>Popular Content</h2>
             <h3>Below is a list of our most popular content</h3>
+            <p>IN PROGRESS...</p>
         </div>
 
         <div class="main2">
@@ -42,6 +43,9 @@
                     League of Legends matches take place all over the world
                     simultaneously.
                 </p>
+                <a class="buttonSecondary" href="HTML/esports.html"
+                    >WATCH NOW</a
+                >
             </div>
             <div>
                 <img src="images/eSportshome.jpg" alt="" />
@@ -57,6 +61,9 @@
                     your gameplay. Through grit and a little bit of luck, you
                     can climb the ranks with the help of our ad-free content.
                 </p>
+                <a class="buttonSecondary" href="HTML/guides.html"
+                    >DISCOVER MORE CHAMPIONS</a
+                >
             </div>
             <div>
                 <img src="images/sittingtree.jpeg" alt="" />
