About me Updates

--- a/HTML/about.html
+++ b/HTML/about.html
@@ -5,6 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Document</title>
         <link rel="stylesheet" href="/CSS/about.css" />
+        <link rel="images" href="images/" />
     </head>
     <body>
         <nav>
@@ -19,9 +20,14 @@
         </nav>
 
         <main>
-            <div class="text-box">
-                <h1>An Innovative League</h1>
+            <div class="background">
+                <h1>Who We Are</h1>   
+                <p> </p>
+            <img src="images/Victory.jpg" alt="" />
+
             </div>
+
+            
         </main>
     </body>
 </html>
