--- a/HTML/about.html
+++ b/HTML/about.html
@@ -7,7 +7,7 @@
         <link rel="stylesheet" href="/CSS/about.css" />
         <link rel="images" href="images/" />
     </head>
-    <body>
+    <section>
         <nav>
             <label class="logo">NexusNews</label>
             <u1>
@@ -18,16 +18,18 @@
                 <li><a href="about.html">About Us</a></li>
             </u1>
         </nav>
-
-        <main>
-            <div class="background">
-                <h1>Who We Are</h1>   
-                <p> </p>
+    </section>
+        
+    <body>
+        <div class="background">
+            <h1></h1>   
+            <p> </p>
             <img src="images/Victory.jpg" alt="" />
 
-            </div>
-
-            
-        </main>
+        </div>
+        <div class="main1"> 
+            <h1> Who We Are</h1>
+            <p>By: Ricky, Adrian, Tienran</p>
+        </div>
     </body>
 </html>
