--- a/index.html
+++ b/index.html
@@ -107,10 +107,7 @@
                 <li>- Personalized Content</li>
             </ul>
             <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolore
-                eveniet perferendis similique fugiat sequi iure velit adipisci
-                qui error officia ullam harum facilis, corrupti dolores? Alias,
-                delectus id? Repellat, dignissimos.
+                test
             </p>
             <h3>Question 3</h3>
             <p>
