--- a/HTML/guides.html
+++ b/HTML/guides.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Document</title>
-        <link rel="stylesheet" href="/CSS/styles.css" />
+        <link rel="stylesheet" href="/CSS/styles.css"/>
     </head>
     <body>
         <nav>
@@ -19,5 +19,7 @@
         </nav>
 
         <main>This is the guides page</main>
+
+        <li><a href="malphite.html">Malphite</a></li>
     </body>
 </html>
