--- a/HTML/malphite.html
+++ b/HTML/malphite.html
@@ -14,7 +14,7 @@
     >
         Malphite
         <img
-            src="https://static.wikia.nocookie.net/leagueoflegends/images/1/10/Malphite_OriginalSquare.png/revision/latest/scale-to-width-down/42?cb=20150402220554"
+            src="/images/guidesimages/malphite/MalphiteSquare.webp"
             alt="malphite"
         />
     </h1>
