--- a/HTML/about.html
+++ b/HTML/about.html
@@ -22,14 +22,27 @@
         
     <body>
         <div class="background">
-            <h1></h1>   
-            <p> </p>
             <img src="images/Victory.jpg" alt="" />
 
         </div>
         <div class="main1"> 
             <h1> Who We Are</h1>
             <p>By: Ricky, Adrian, Tienran</p>
+        </div>
+
+        <div class="textAreaColumn">
+            <div>
+                <span>Ricky Pham</span>
+                <textarea>Content goes here</textarea>
+            </div>
+            <div>
+                <span>Adrian Diaz</span>
+                <textarea>Content goes here</textarea>
+            </div>
+            <div>
+                <span>Tienran </span>
+                <textarea>Content goes here</textarea>
+            </div>
         </div>
     </body>
 </html>
