--- a/HTML/blog.html
+++ b/HTML/blog.html
@@ -8,20 +8,22 @@
         <link rel="images" href="/images/" />
     </head>
     <body>
-        <nav>
-            <label class="logo">NexusNews</label>
-            <u1>
-                <li><a href="/index.html">Home</a></li>
-                <li><a href="blog.html">Blog</a></li>
-                <li><a href="esports.html">Esports</a></li>
-                <li><a href="guides.html">Guides</a></li>
-                <li><a href="about.html">About Us</a></li>
-            </u1>
-        </nav>
-        <div class="text-box">
-            <h1>Blog</h1>
-            <p>This is a blog</p>
-            <p>LEARN MORE (BUTTON)</p>
+        <div class="header">
+            <nav>
+                <img src="/images/sgDividerIcon.png" class="logo" />
+                <ul>
+                    <li><a href="/index.html">HOME</a></li>
+                    <li><a href="/HTML/blog.html">BLOG</a></li>
+                    <li><a href="/HTML/esports.html">ESPORTS</a></li>
+                    <li><a href="/HTML/guides.html">GUIDES</a></li>
+                    <li><a href="/HTML/about.html">ABOUT</a></li>
+                </ul>
+            </nav>
+            <div class="main1">
+                <p>Daily news, updates, and patch notes</p>
+                <div class="line"></div>
+                <h1>Blog</h1>
+            </div>
         </div>
     </body>
 </html>
