--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
                 <li><a href="HTML/blog.html">BLOG</a></li>
                 <li><a href="HTML/esports.html">ESPORTS</a></li>
                 <li><a href="HTML/guides.html">GUIDES</a></li>
+                <li><a href="HTML/about.html">ABOUT</a></li>
             </ul>
         </nav>
         <div class="main1">
