--- a/HTML/about.html
+++ b/HTML/about.html
@@ -7,26 +7,24 @@
         <link rel="stylesheet" href="/CSS/about.css" />
         <link rel="images" href="images/" />
     </head>
-    <section>
+    <div class="header">
         <nav>
-            <label class="logo">NexusNews</label>
-            <u1>
-                <li><a href="/index.html">Home</a></li>
-                <li><a href="blog.html">Blog</a></li>
-                <li><a href="esports.html">Esports</a></li>
-                <li><a href="guides.html">Guides</a></li>
-                <li><a href="about.html">About Us</a></li>
-            </u1>
+            <img src="/images/sgDividerIcon.png" class="logo" />
+            <ul>
+                <li><a href="/index.html">HOME</a></li>
+                <li><a href="/HTML/blog.html">BLOG</a></li>
+                <li><a href="/HTML/esports.html">ESPORTS</a></li>
+                <li><a href="/HTML/guides.html">GUIDES</a></li>
+                <li><a href="/HTML/about.html">ABOUT</a></li>
+            </ul>
         </nav>
-    </section>
-        
+    </div>
     <body>
         <div class="background">
             <img src="images/Victory.jpg" alt="" />
-
         </div>
-        <div class="main1"> 
-            <h1> Who We Are</h1>
+        <div class="main1">
+            <h1>Who We Are</h1>
             <p>By: Ricky, Adrian, Tienran</p>
         </div>
 
