--- a/HTML/esports.html
+++ b/HTML/esports.html
@@ -7,16 +7,19 @@
         <link rel="stylesheet" href="/CSS/styles.css" />
     </head>
     <body>
-        <nav>
-            <label class="logo">NexusNews</label>
-            <u1>
-                <li><a href="/index.html">Home</a></li>
-                <li><a href="blog.html">Blog</a></li>
-                <li><a href="esports.html">Esports</a></li>
-                <li><a href="guides.html">Guides</a></li>
-                <li><a href="about.html">About Us</a></li>
-            </u1>
-        </nav>
+        <div class="header">
+            <nav>
+                <img src="/images/sgDividerIcon.png" class="logo" />
+                <ul>
+                    <li><a href="/index.html">HOME</a></li>
+                    <li><a href="/HTML/blog.html">BLOG</a></li>
+                    <li><a href="/HTML/esports.html">ESPORTS</a></li>
+                    <li><a href="/HTML/guides.html">GUIDES</a></li>
+                    <li><a href="/HTML/about.html">ABOUT</a></li>
+                </ul>
+            </nav>
+        </div>
+        <body>
 
         <main>This is the esports page</main>
     </body>
