--- a/HTML/guides.html
+++ b/HTML/guides.html
@@ -4,22 +4,26 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Document</title>
-        <link rel="stylesheet" href="/CSS/styles.css"/>
+        <link rel="stylesheet" href="/CSS/styles.css" />
     </head>
     <body>
-        <nav>
-            <label class="logo">NexusNews</label>
-            <u1>
-                <li><a href="/index.html">Home</a></li>
-                <li><a href="blog.html">Blog</a></li>
-                <li><a href="esports.html">Esports</a></li>
-                <li><a href="guides.html">Guides</a></li>
-                <li><a href="about.html">About Us</a></li>
-            </u1>
-        </nav>
+        <div class="header">
+            <nav>
+                <img src="/images/sgDividerIcon.png" class="logo" />
+                <ul>
+                    <li><a href="/index.html">HOME</a></li>
+                    <li><a href="/HTML/blog.html">BLOG</a></li>
+                    <li><a href="/HTML/esports.html">ESPORTS</a></li>
+                    <li><a href="/HTML/guides.html">GUIDES</a></li>
+                    <li><a href="/HTML/about.html">ABOUT</a></li>
+                </ul>
+            </nav>
+        </div>
 
-        <main>This is the guides page</main>
-
-        <li><a href="malphite.html">Malphite</a></li>
+        <div class="main1">
+            <p>Champion information, critics, and item selection</p>
+            <div class="line"></div>
+            <h1>Guides</h1>
+        </div>
     </body>
 </html>
