Blog html setup

--- a/index.html
+++ b/index.html
@@ -149,12 +149,6 @@
                 Don't worry, our data is legit! All of our data comes from the
                 official League of Legends site.
             </p>
-            <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet
-                obcaecati harum numquam, iusto laborum praesentium officiis quas
-                soluta nemo ea dolore ducimus aliquid nulla incidunt fuga optio
-                eveniet nisi officia.
-            </p>
             <h3>Can you add additional content?</h3>
             <p>
                 If you would like for us to add additional content or have any
@@ -168,6 +162,13 @@
                     that violates TOS. Thank you.
                 </i>
             </p>
+        </div>
+        <div class="divider">
+            <div class="dividerlinetop"></div>
+            <div class="dividericon">
+                <img src="/images/sgDividerIcon.png" />
+            </div>
+            <div class="dividerlinebottom"></div>
         </div>
 
         <div class="footer">
