--- a/HTML/malphite.html
+++ b/HTML/malphite.html
@@ -202,7 +202,7 @@
     <p>
         <strong>Shoes choices</strong>:
         <img
-            src="https://static.wikia.nocookie.net/leagueoflegends/images/1/14/Ionian_Boots_of_Lucidity_item.png/revision/latest/scale-to-width-down/40?cb=20201029200352"
+            src="image/item picture/Ionian_Boots_of_Lucidity_item.webp"
             alt="shoes1"
         />
         or
