--- a/HTML/malphite.html
+++ b/HTML/malphite.html
@@ -207,58 +207,58 @@
         />
         or
         <img
-            src="https://static.wikia.nocookie.net/leagueoflegends/images/9/96/Mercury%27s_Treads_item.png/revision/latest/scale-to-width-down/40?cb=20201027211544"
+            src="images\item picture\Mercury%27s_Treads_item.webp"
             alt="shoes2"
         />
         or
         <img
-            src="https://static.wikia.nocookie.net/leagueoflegends/images/b/be/Plated_Steelcaps_item.png/revision/latest/scale-to-width-down/40?cb=20201029223540"
+            src="images\item picture\Plated_Steelcaps_item.webp"
             alt="s3"
         />
     </p>
     <p>
         <strong>Essential</strong>:
         <img
-            src="https://static.wikia.nocookie.net/leagueoflegends/images/0/0f/Sunfire_Aegis_item.png/revision/latest/scale-to-width-down/40?cb=20201028172304"
+            src="images\item picture\Sunfire_Aegis_item.webp"
             alt="e1"
         />
         <img
-            src="https://static.wikia.nocookie.net/leagueoflegends/images/5/58/Frozen_Heart_item.png/revision/latest/scale-to-width-down/40?cb=20210904173935"
+            src="images\item picture\Frozen_Heart_item.webp"
             alt="e2"
         />
         <img
-            src="https://static.wikia.nocookie.net/leagueoflegends/images/c/c4/Iceborn_Gauntlet_item.png/revision/latest/scale-to-width-down/40?cb=20221020145819"
+            src="images\item picture\Iceborn_Gauntlet_item.webp"
             alt="e3"
         />
         <img
-            src="https://static.wikia.nocookie.net/leagueoflegends/images/c/c7/Jak%27Sho%2C_The_Protean_item.png/revision/latest/scale-to-width-down/40?cb=20221019174444"
+            src="images\item picture\Jak2C_The_Protean_item.webp"
             alt="e4"
         />
         <img
-            src="https://static.wikia.nocookie.net/leagueoflegends/images/8/8f/Abyssal_Mask_item.png/revision/latest/scale-to-width-down/40?cb=20221019161205"
+            src="images\item picture\Abyssal_Mask_item.webp"
             alt="e5"
         />
     </p>
     <p>
         <strong>Optional</strong>:
         <img
-            src="https://static.wikia.nocookie.net/leagueoflegends/images/e/e6/Unending_Despair_item.png/revision/latest/scale-to-width-down/40?cb=20231207052135"
+            src="images\item picture\Unending_Despair_item.webp"
             alt="o1"
         />
         <img
-            src="https://static.wikia.nocookie.net/leagueoflegends/images/0/08/Randuin%27s_Omen_item.png/revision/latest/scale-to-width-down/40?cb=20201027213705"
+            src="images\item picture\Randuin%27s_Omen_item.webp"
             alt="o2"
         />
         <img
-            src="https://static.wikia.nocookie.net/leagueoflegends/images/c/cb/Kaenic_Rookern_item.png/revision/latest/scale-to-width-down/40?cb=20231207052304"
+            src="images\item picture\Kaenic_Rookern_item.webp"
             alt="o3"
         />
         <img
-            src="https://static.wikia.nocookie.net/leagueoflegends/images/3/37/Force_of_Nature_item.png/revision/latest/scale-to-width-down/40?cb=20201118204335"
+            src="images\item picture\Force_of_Nature_item.webp"
             alt="o4"
         />
         <img
-            src="https://static.wikia.nocookie.net/leagueoflegends/images/9/9f/Hollow_Radiance_item.png/revision/latest/scale-to-width-down/40?cb=20231207052019"
+            src="images\item picture\Hollow_Radiance_item.webp"
             alt="o5"
         />
     </p>
@@ -280,49 +280,49 @@
     <p>
         <strong>Shoes choices</strong>:
         <img
-            src="https://static.wikia.nocookie.net/leagueoflegends/images/1/14/Ionian_Boots_of_Lucidity_item.png/revision/latest/scale-to-width-down/40?cb=20201029200352"
+            src="images\item picture\Ionian_Boots_of_Lucidity_item.webp"
             alt="s1"
         />
         <img
-            src="https://static.wikia.nocookie.net/leagueoflegends/images/6/60/Sorcerer%27s_Shoes_item.png/revision/latest/scale-to-width-down/40?cb=20201118210136"
+            src="images\item picture\Sorcerer%27s_Shoes_item.webp"
             alt="s2"
         />
     </p>
     <p>
         <strong>Essential</strong>:
         <img
-            src="https://static.wikia.nocookie.net/leagueoflegends/images/a/af/Malignance_item.png/revision/latest/scale-to-width-down/40?cb=20231122033507"
+            src="images\item picture\Manamune_item.webp"
             alt="e1"
         />
         <img
-            src="https://static.wikia.nocookie.net/leagueoflegends/images/b/b4/Stormsurge_item.png/revision/latest/scale-to-width-down/40?cb=20231122033513"
+            src="images\item picture\Stormsurge_item.webp"
             alt="e2"
         />
         <img
-            src="https://static.wikia.nocookie.net/leagueoflegends/images/b/bc/Shadowflame_item.png/revision/latest/scale-to-width-down/40?cb=20211020233741"
+            src="images\item picture\Shadowflame_item.webp"
             alt="e3"
         />
         <img
-            src="https://static.wikia.nocookie.net/leagueoflegends/images/c/c5/Rabadon%27s_Deathcap_item.png/revision/latest/scale-to-width-down/40?cb=20201118205704"
+            src="images\item picture\Rabadon%27s_Deathcap_item.webp"
             alt="e4"
         />
         <img
-            src="https://static.wikia.nocookie.net/leagueoflegends/images/6/65/Void_Staff_item.png/revision/latest/scale-to-width-down/40?cb=20221019173839"
+            src="images\item picture\Void_Staff_item.webp"
             alt="e5"
         />
     </p>
     <p>
         <strong>Optional</strong>:
         <img
-            src="https://static.wikia.nocookie.net/leagueoflegends/images/6/60/Lich_Bane_item.png/revision/latest/scale-to-width-down/40?cb=20201118205241"
+            src="images\item picture\Lich_Bane_item.webp"
             alt="o1"
         />
         <img
-            src="https://static.wikia.nocookie.net/leagueoflegends/images/b/b5/Zhonya%27s_Hourglass_item.png/revision/latest/scale-to-width-down/40?cb=20201029203022"
+            src="images\item picture\Zhonya%27s_Hourglass_item.webp"
             alt="o1"
         />
         <img
-            src="https://static.wikia.nocookie.net/leagueoflegends/images/0/03/Banshee%27s_Veil_item.png/revision/latest/scale-to-width-down/40?cb=20240915030006"
+            src="images\item picture\Banshee's_Veil_item.webp"
             alt="o3"
         />
     </p>
